examples/test/testpolicy657.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy657
  namespace: namespace203
spec:
  podSelector:
    matchLabels:
      key4: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value36
          key16: value21
      podSelector:
        matchLabels:
          key48: value13
          key18: value37
          key23: value38
